# ghost

./: .gitignore  25march.md  CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
src/checkpoint/: main.cpp
src/git/: CMakeLists.txt  blame.cpp  blame.hpp  diff.cpp  diff.hpp  notes.cpp  notes.hpp  repo.cpp  repo.hpp
src/note/: CMakeLists.txt  gitai_reader.cpp  gitai_reader.hpp  line_range.cpp  line_range.hpp  reader.cpp  reader.hpp  verified_reader.cpp  verified_reader.hpp  verified_writer.cpp  verified_writer.hpp  writer.cpp  writer.hpp
